--- a/src/pages/comment-detail/comment-detail.html
+++ b/src/pages/comment-detail/comment-detail.html
@@ -23,7 +23,7 @@
       <ion-item>
         <div item-left class="film-comment-time">{{comment_data?.created_at}}</div>
         <div item-right>
-          <ion-icon class="dianzan" name="dianzan" (click)="dianzanDo(1)">{{comment_data?.useful_count}}</ion-icon>
+          <ion-icon class="dianzan" name="dianzan">{{comment_data?.useful_count}}</ion-icon>
         </div>
       </ion-item>
     </div>
