--- a/src/pages/go-login/login/login.html
+++ b/src/pages/go-login/login/login.html
@@ -16,25 +16,25 @@
 </ion-header>
 <ion-content class="login-content">
   <ion-list>
-    <ion-item>
+    <ion-item class="account">
       <ion-label>
         <ion-icon name="accoundIcon"></ion-icon>
       </ion-label>
-      <ion-input type="text" maxlength="16" placeholder="账号/手机号码/邮箱" #accound></ion-input>
+      <ion-input type="text" placeholder="账号/手机号码/邮箱" #accound></ion-input>
     </ion-item>
-    <ion-item>
+    <ion-item class="password">
       <ion-label>
         <ion-icon name="passwordIcon"></ion-icon>
       </ion-label>
-      <ion-input type="password" minlength="6" maxlength="16" placeholder="请输入密码" #password></ion-input>
+      <ion-input type="password" minlength="8" maxlength="16" placeholder="请输入密码" #password></ion-input>
       <ion-icon item-right name="pwSeeIcon"></ion-icon>
     </ion-item>
   </ion-list>
-  <div class="login-box">
+  <div class="login-btn-box">
     <button class="loginBtn" ion-button [block]="true" (click)="logIn(accound,password)" >登录</button>
     <button class="forgot-password floatRight">忘记密码</button>
   </div>
-  <div class="register-box">
-    <button class="registerBtn" ion-button>立即注册</button>
+  <div class="register-btn-box">
+    <button class="registerBtn" ion-button (click)="goRegister()">去注册</button>
   </div>
 </ion-content>
