--- a/src/pages/personal-center/personal-info-setting/nameSetting.html
+++ b/src/pages/personal-center/personal-info-setting/nameSetting.html
@@ -5,5 +5,5 @@
   </ion-navbar>
 </ion-header>
 <ion-content class="nameSetting-content">
-  <ion-input type="text" placeholder="" autocorrect value="cherilxf" #username></ion-input>
+  <ion-input type="text" placeholder="请输入昵称" autocorrect [value] = "user_nickname" #username></ion-input>
 </ion-content>
