--- a/src/pages/personal-center/personal-info-setting/sexSetting.html
+++ b/src/pages/personal-center/personal-info-setting/sexSetting.html
@@ -6,12 +6,12 @@
 </ion-header>
 <ion-content class="sexSetting-content">
   <ion-list radio-group [(ngModel)]="user_sex">
-    <ion-item>
+    <ion-item class="man-option">
       <ion-label>男</ion-label>
       <ion-radio value="男" [checked]="user_sex == '男'"></ion-radio>
     </ion-item>
 
-    <ion-item>
+    <ion-item class="women-option">
       <ion-label>女</ion-label>
       <ion-radio value="女" [checked]="user_sex == '女'"></ion-radio>
     </ion-item>
